@@ -1,3 +1,9 @@
+2003-10-16  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/socket.cxx (bind): Pass a copy of the socket address so the
+	stack can modify it without changing the users copy. Bug found by
+	reji@codito.com.
+
 2003-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/fio.h (CYG_FILEIO_SIGMASK_SET): Fixed a compiler warning
